[gd_scene load_steps=10 format=2]

[ext_resource path="res://enemy/enemy.gd" type="Script" id=1]
[ext_resource path="res://MatShadow.tres" type="Material" id=2]
[ext_resource path="res://enemy/walker.png" type="Texture" id=3]
[ext_resource path="res://Audio/Robot04wav.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.6935, 19.1017 )

[sub_resource type="Animation" id=2]
length = 2.0
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( -0.02, 0.7 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.00873202, 0.2, 0.63 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SoundHit:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.00999999 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.98086 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "dead()"
} ]
}

[sub_resource type="Animation" id=3]
length = 6.75
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.75, 1.5, 2.25, 3, 3.75, 4.5, 5.25, 6, 6.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 5, 6, 5, 6, 7, 6, 7, 5 ]
}

[sub_resource type="Animation" id=4]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 13.4556
height = 14.2002

[node name="EnemyFlying" type="KinematicBody2D"]
collision_layer = 3
script = ExtResource( 1 )
staticStart = false
respawn = true
flying = true

[node name="DamageRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageRange"]
shape = SubResource( 1 )

[node name="Anim" type="AnimationPlayer" parent="."]
anims/explode = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 3
material = ExtResource( 2 )
texture = ExtResource( 3 )
flip_h = true
hframes = 8

[node name="Explosion" type="Position2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.00525069, -0.727495 )
rotation = -1.5708
shape = SubResource( 5 )

[node name="DetectFloorLeft" type="RayCast2D" parent="."]
position = Vector2( -23.2868, -9.58146 )
enabled = true
cast_to = Vector2( 0, 45 )
collision_mask = 2

[node name="DetectWallLeft" type="RayCast2D" parent="."]
position = Vector2( -22.1361, -0.739977 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="DetectWallRight" type="RayCast2D" parent="."]
position = Vector2( 23.2788, -0.381488 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="DetectFloorRight" type="RayCast2D" parent="."]
position = Vector2( 19.1987, -9.34363 )
enabled = true
cast_to = Vector2( 0, 45 )
collision_mask = 2

[node name="SoundHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
pitch_scale = 0.9

[node name="Spawner" type="VisibilityEnabler2D" parent="."]

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="DamageRange" to="." method="_on_Enemy_body_entered"]
[connection signal="screen_entered" from="Spawner" to="." method="_on_Spawner_screen_entered"]
[connection signal="screen_exited" from="Spawner" to="." method="_on_Spawner_screen_exited"]
